@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2006, 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2006, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@
  * @test
  * @bug 6402062 6487891
  * @summary Tests EtchedBorder encoding
- * @run main/othervm -Djava.security.manager=allow javax_swing_border_EtchedBorder
+ * @run main/othervm javax_swing_border_EtchedBorder
  * @author Sergey Malenkov
  */
 
@@ -34,7 +34,7 @@ import javax.swing.border.EtchedBorder;
 
 public final class javax_swing_border_EtchedBorder extends AbstractTest<EtchedBorder> {
     public static void main(String[] args) {
-        new javax_swing_border_EtchedBorder().test(true);
+        new javax_swing_border_EtchedBorder().test();
     }
 
     protected EtchedBorder getObject() {
